re PR rtl-optimization/17078 (Jump into if(0)-substatement fails)

PR rtl-optimization/17078
	* c-semantics.c (expand_unreachable_if_stmt): If the end of the
	specified statement list is reachable, always return a non-NULL
	pointer.  If necessary, return error_mark_node.

	* gcc.c-torture/execute/pr17078-1.c: New test case.

From-SVN: r86462